Add README.md [skip ci]

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,12 @@
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
+    paths:
+      - 'src/**'
+      - 'package.json'
+      - 'package-lock.json'
+      - 'wrangler.toml'
+      - 'tsconfig.json'
 jobs:
   release:
     runs-on: ubuntu-latest
