Add KV support to buckets

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,7 +6,13 @@ compatibility_date = "2023-04-16"
 crons = []
 
 [env.dev]
-kv_namespaces = [{ binding = "CACHE", id = "857bc32ef3e84df3a29fc5f98c5c145f" }]
+kv_namespaces = [
+	{ binding = "CACHE", id = "51292a717b8a495aa567d524f90c56a2" },
+	{ binding = "BUCKETS", id = "b7ded24a9d634aecad31899ebe223ef2" },
+]
 
 [env.production]
-kv_namespaces = [{ binding = "CACHE", id = "3e272ff9879f430682babd8e01e53316" }]
+kv_namespaces = [
+	{ binding = "CACHE", id = "61e75786d0d04cb7b7516ad682001cf0" },
+	{ binding = "BUCKETS", id = "5834eb959af448d0b2f68a0abe2712f9" },
+]
