--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "discord-interactions": "^3.3.0",
     "discord-snowflake": "^2.0.0",
     "itty-router": "^3.0.12",
-    "uuid": "^9.0.0",
-    "winston": "^3.8.2"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230404.0",
@@ -32,7 +31,6 @@
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
-    "better-sqlite3": "^8.0.1",
     "dotenv": "^16.0.3",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
