--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "discord-api-types": "^0.37.38",
     "discord-interactions": "^3.3.0",
     "discord-snowflake": "^2.0.0",
+    "he": "^1.2.0",
     "itty-router": "^3.0.12",
     "uuid": "^9.0.0"
   },
@@ -27,6 +28,7 @@
     "@cloudflare/workers-types": "^4.20230404.0",
     "@tsconfig/node18": "^1.0.1",
     "@types/debug": "^4.1.7",
+    "@types/he": "^1.2.0",
     "@types/node": "^18.15.11",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
