--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "wrangler dev --local",
+    "start": "wrangler dev --env dev --local",
     "deploy": "wrangler publish",
-    "deploy:dev": "wrangler publish",
+    "deploy:dev": "wrangler publish --env dev",
     "register": "ts-node --esm src/register-global.ts",
     "register:dev": "ts-node --esm src/register-dev.ts",
 		"prettier": "prettier --write ./src",
