--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,9 +2,15 @@ name = "basura"
 main = "./src/server.ts"
 compatibility_date = "2023-04-16"
 route = "app.basura.gavenda.dev"
+d1_databases = [
+  { binding = "DB", database_name = "basura", database_id = "d93aefbd-1066-4198-82e8-7e50fd151ac0" },
+]
 
 [triggers]
 crons = []
 
 [env.dev]
 route = "dev.basura.gavenda.dev"
+d1_databases = [
+  { binding = "DB", database_name = "basura_dev", database_id = "11ac762d-38dc-40da-8590-54726828b281" },
+]
