--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "discord-snowflake": "^2.0.0",
     "he": "^1.2.0",
     "itty-router": "^3.0.12",
+    "kysely": "^0.24.2",
+    "kysely-d1": "^0.3.0",
+    "kysely-planetscale": "^1.3.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
