Add winston + logtail logging

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
       "@client/*": ["src/client/*"],
       "@graphql/*": ["src/graphql/*"],
       "@util/*": ["src/util/*"],
-      "@db/*": ["src/db/*"]
+      "@db/*": ["src/db/*"],
+      "@logging/logger": ["src/logger.ts"]
     }
   },
   "include": ["src"],
