--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "author": "Gavenda <gavenda@disroot.org>",
   "license": "MIT",
   "dependencies": {
+    "@logtail/node": "^0.4.0",
+    "@logtail/winston": "^0.4.1",
     "@planetscale/database": "1.6.0",
     "@upstash/redis": "^1.20.4",
     "discord-api-types": "^0.37.38",
@@ -25,7 +27,8 @@
     "kysely": "^0.24.2",
     "kysely-d1": "^0.3.0",
     "kysely-planetscale": "^1.3.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230404.0",
