--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "kysely-d1": "^0.3.0",
     "kysely-planetscale": "^1.3.0",
     "uuid": "^9.0.0",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "winston-transport": "^4.5.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230404.0",
