--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
     "kysely": "^0.24.2",
     "kysely-d1": "^0.3.0",
     "kysely-planetscale": "^1.3.0",
-    "uuid": "^9.0.0",
-    "winston": "^3.8.2",
-    "winston-transport": "^4.5.0"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230404.0",
