--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "wrangler dev --env dev --local",
     "deploy": "wrangler publish",
     "deploy:dev": "wrangler publish --env dev",
-    "register": "ts-node --esm src/register-global.ts",
-    "register:dev": "ts-node --esm src/register-dev.ts",
+    "register": "tsx src/register-global.ts",
+    "register:dev": "tsx src/register-dev.ts",
     "prettier": "prettier --write ./src",
     "fix": "eslint --fix src/*.ts",
     "lint": "eslint src/*.ts"
@@ -40,7 +40,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.7",
-    "ts-node": "^10.9.1",
+    "tsx": "^3.12.7",
     "typescript": "^5.0.4",
     "wrangler": "^2.17.0"
   }
