--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "license": "MIT",
   "dependencies": {
     "@planetscale/database": "1.6.0",
+    "@studio-bogus/discord-interaction-app": "^1.0.1",
+    "@studio-bogus/discord-interaction-client": "^1.0.1",
+    "@studio-bogus/logging": "^1.0.3",
     "@upstash/redis": "^1.20.4",
     "discord-api-types": "^0.37.38",
     "discord-interactions": "^3.3.0",
@@ -24,15 +27,13 @@
     "he": "^1.2.0",
     "kysely": "^0.24.2",
     "kysely-d1": "^0.3.0",
-    "kysely-planetscale": "^1.3.0",
-    "uuid": "^9.0.0"
+    "kysely-planetscale": "^1.3.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230404.0",
     "@tsconfig/node18": "^1.0.1",
     "@types/he": "^1.2.0",
     "@types/node": "^18.15.11",
-    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "dotenv": "^16.0.3",
