--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,6 +8,9 @@ kv_namespaces = [
   { binding = "CACHE", id = "1343defa59764275adbb62973370219a", preview_id = "f5506d2c4b9d4b7fab09ccbbbfd580c0" },
   { binding = "NOTIFICATION", id = "70a6246c3ebe427cbe8a70b02027176b", preview_id = "7f3ab3b58ef5434bb0a16519a89c56e9" },
 ]
+d1_databases = [
+  { binding = "D1", database_name = "basura", database_id = "d93aefbd-1066-4198-82e8-7e50fd151ac0" }
+]
 
 [triggers]
 crons = ["*/2 * * * *"]
@@ -19,4 +22,7 @@ kv_namespaces = [
   { binding = "BUCKET", id = "c9a96a1662104ef48470f393d2de7d6d", preview_id = "e57b7cdce0474ad8aa72be0924887460" },
   { binding = "CACHE", id = "e5f97ca8929a488fa4da77a412a23b5a", preview_id = "f5506d2c4b9d4b7fab09ccbbbfd580c0" },
   { binding = "NOTIFICATION", id = "f16c9aaa6db2483c9d5b7687f7446f79", preview_id = "7f3ab3b58ef5434bb0a16519a89c56e9" },
+]
+d1_databases = [
+  { binding = "D1", database_name = "basura_dev", database_id = "11ac762d-38dc-40da-8590-54726828b281" }
 ]
