--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "start": "wrangler dev --env dev --local",
-    "deploy": "wrangler publish",
-    "deploy:dev": "wrangler publish --env dev",
+    "deploy": "cross-env NO_D1_WARNING=true wrangler publish",
+    "deploy:dev": "cross-env NO_D1_WARNING=true wrangler publish --env dev",
     "register": "tsx src/register-global.ts",
     "register:dev": "tsx src/register-dev.ts",
     "prettier": "prettier --write ./src",
@@ -17,7 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "@planetscale/database": "1.6.0",
-    "@studio-bogus/discord-interaction-app": "^1.0.1",
+    "@studio-bogus/discord-interaction-app": "^1.1.0",
     "@studio-bogus/discord-interaction-client": "^1.0.1",
     "@studio-bogus/logging": "^1.0.3",
     "@upstash/redis": "^1.20.4",
@@ -35,6 +35,7 @@
     "@types/node": "^18.15.11",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
