--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "discord-snowflake": "^2.0.0",
     "he": "^1.2.0",
     "kysely": "^0.24.2",
-    "kysely-planetscale": "^1.3.0"
+    "kysely-d1": "^0.3.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230404.0",
