--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
       - 'pnpm-lock.yaml'
       - 'wrangler.toml'
       - 'tsconfig.json'
+  workflow_dispatch:
 jobs:
   build:
     name: Build
