--- a/package.json
+++ b/package.json
@@ -17,22 +17,20 @@
   "license": "MIT",
   "dependencies": {
     "@planetscale/database": "1.6.0",
-    "@studio-bogus/discord-interaction-app": "^1.1.0",
-    "@studio-bogus/discord-interaction-client": "^1.0.1",
-    "@studio-bogus/logging": "^1.0.3",
-    "@upstash/redis": "^1.20.4",
     "discord-api-types": "^0.37.38",
     "discord-interactions": "^3.3.0",
     "discord-snowflake": "^2.0.0",
     "he": "^1.2.0",
     "kysely": "^0.24.2",
-    "kysely-d1": "^0.3.0"
+    "kysely-d1": "^0.3.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230404.0",
     "@tsconfig/node18": "^1.0.1",
     "@types/he": "^1.2.0",
     "@types/node": "^18.15.11",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "cross-env": "^7.0.3",
@@ -41,7 +39,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.7",
-    "tsx": "^3.12.7",
+    "tsx": "^3.14.0",
     "typescript": "^5.0.4",
     "wrangler": "^2.19.0"
   }
