--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,18 @@
       "@env/env": [
         "src/env.ts"
       ],
+      "@studio-bogus/discord-interaction-app": [
+        "src/app/index.ts"
+      ],
+      "@studio-bogus/discord-interaction-app/context": [
+        "src/app/context/index.ts"
+      ],
+      "@studio-bogus/discord-interaction-client": [
+        "src/client/index.ts"
+      ],
+      "@anilist/gql": [
+        "src/anilist/gql/index.ts"
+      ],
       "@anilist/*": [
         "src/anilist/*"
       ],
