--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,8 +63,8 @@ jobs:
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-      - run: pnpm run --if-present register
-        continue-on-error: true
-        env:
-          DISCORD_APPLICATION_ID: ${{ vars.DISCORD_APPLICATION_ID }}
-          DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
+      # - run: pnpm run --if-present register
+      #   continue-on-error: true
+      #   env:
+      #     DISCORD_APPLICATION_ID: ${{ vars.DISCORD_APPLICATION_ID }}
+      #     DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
