chore: Rework project tools [skip ci]

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,10 @@
 {
-  "semi": true,
-  "singleQuote": true,
+  "trailingComma": "none",
   "useTabs": false,
   "tabWidth": 2,
-	"printWidth": 160
+  "semi": true,
+  "singleQuote": true,
+  "printWidth": 120,
+  "endOfLine": "lf",
+  "quoteProps": "consistent"
 }
