--- a/package.json
+++ b/package.json
@@ -9,38 +9,50 @@
     "deploy:dev": "cross-env NO_D1_WARNING=true wrangler publish --env dev",
     "register": "tsx src/register-global.ts",
     "register:dev": "tsx src/register-dev.ts",
-    "prettier": "prettier --write ./src",
-    "fix": "eslint --fix src/*.ts",
-    "lint": "eslint src/*.ts"
+    "prettier": "prettier --write src",
+    "lint": "eslint src",
+    "prepare": "husky"
   },
   "author": "Gavenda <gavenda@disroot.org>",
   "license": "MIT",
   "dependencies": {
-    "@planetscale/database": "1.6.0",
-    "discord-api-types": "^0.37.38",
-    "discord-interactions": "^3.3.0",
+    "discord-api-types": "^0.37.73",
     "discord-snowflake": "^2.0.0",
     "he": "^1.2.0",
-    "kysely": "^0.24.2",
+    "kysely": "^0.27.3",
     "kysely-d1": "^0.3.0",
+    "tweetnacl": "^1.0.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20230404.0",
-    "@tsconfig/node18": "^1.0.1",
-    "@types/he": "^1.2.0",
-    "@types/node": "^18.15.11",
-    "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
+    "@cloudflare/workers-types": "^4.20240312.0",
+    "@types/he": "^1.2.3",
+    "@types/uuid": "^9.0.8",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.0.3",
-    "eslint": "^8.38.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.7",
-    "tsx": "^3.14.0",
-    "typescript": "^5.0.4",
-    "wrangler": "^3.22.1"
+    "dotenv": "^16.4.5",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
+    "tsx": "^4.7.1",
+    "typescript": "^5.4.2",
+    "typescript-eslint": "^7.2.0",
+    "wrangler": "^3.33.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/node": "18.15.3"
+    }
+  },
+  "volta": {
+    "node": "21.7.1"
+  },
+  "lint-staged": {
+    "**/*.ts": [
+      "prettier --write",
+      "eslint"
+    ]
   }
 }
