--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         name: Checkout
+      - uses: pnpm/action-setup@v3
+        name: Install pnpm
+        with:
+          run_install: true
       - uses: cloudflare/wrangler-action@v3
         name: Deploy
         with:
