--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
 name = "basura"
 main = "./src/server.ts"
-compatibility_date = "2023-12-01"
+compatibility_date = "2024-09-02"
 route = "app.basura.gavenda.dev"
 vars = { ENVIRONMENT = "production" }
 kv_namespaces = [
@@ -14,6 +14,10 @@ d1_databases = [
 
 [triggers]
 crons = ["*/2 * * * *"]
+
+[observability]
+enabled = true
+head_sampling_rate = 1
 
 [env.dev]
 route = "dev.basura.gavenda.dev"
