--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "he": "^1.2.0",
     "kysely": "^0.27.4",
     "kysely-d1": "^0.3.0",
+    "node-europa": "^6.0.0",
     "tweetnacl": "^1.0.3",
     "uuid": "^10.0.0"
   },
@@ -38,11 +39,6 @@
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.11.0",
     "wrangler": "^3.81.0"
-  },
-  "pnpm": {
-    "overrides": {
-      "@types/node": "18.15.3"
-    }
   },
   "volta": {
     "node": "23.0.0"
