--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 name = "basura"
 main = "./src/server.ts"
-compatibility_date = "2024-09-02"
+compatibility_date = "2024-09-23"
+compatibility_flags = [ "nodejs_compat" ]
 route = "app.basura.gavenda.dev"
 vars = { ENVIRONMENT = "production" }
 kv_namespaces = [
