--- a/package.json
+++ b/package.json
@@ -6,44 +6,39 @@
   "scripts": {
     "start": "wrangler dev --env dev --local",
     "ngrok": "ngrok http --url=heterocyclic-ursula-ungeologically.ngrok-free.dev 8787",
-    "deploy": "wrangler publish",
-    "deploy:dev": "wrangler publish --env dev",
+    "deploy": "wrangler deploy --env=''",
+    "deploy:dev": "wrangler deploy --env dev",
     "register": "tsx src/register-global.ts",
     "register:dev": "tsx src/register-dev.ts",
     "prettier": "prettier --write src",
     "lint": "eslint src",
-    "prepare": "husky"
+    "prepare": "husky",
+    "type-check": "tsc"
   },
   "author": "Gavenda <gavenda@disroot.org>",
   "license": "MIT",
   "dependencies": {
-    "discord-api-types": "^0.38.25",
-    "discord-interactions": "^4.3.0",
+    "discord-api-types": "^0.38.30",
+    "discord-interactions": "^4.4.0",
     "discord-snowflake": "^2.0.0",
-    "he": "^1.2.0",
-    "kysely": "^0.28.7",
-    "kysely-d1": "^0.4.0",
-    "node-europa": "^6.0.0",
-    "tweetnacl": "^1.0.3",
+    "node-html-markdown-cloudflare": "^1.3.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250913.0",
-    "@types/he": "^1.2.3",
     "@types/uuid": "^10.0.0",
-    "dotenv": "^17.2.2",
-    "eslint": "^9.35.0",
+    "dotenv": "^17.2.3",
+    "eslint": "^9.37.0",
     "husky": "^9.1.7",
-    "lint-staged": "^16.1.6",
+    "lint-staged": "^16.2.4",
     "ngrok": "5.0.0-beta.2",
     "prettier": "^3.6.2",
-    "tsx": "^4.20.5",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.44.0",
-    "wrangler": "^4.37.0"
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.1",
+    "wrangler": "^4.42.2"
   },
   "volta": {
-    "node": "24.8.0"
+    "node": "24.10.0"
   },
   "lint-staged": {
     "**/*.ts": [
@@ -51,5 +46,5 @@
       "eslint"
     ]
   },
-  "packageManager": "pnpm@10.16.1+sha512.0e155aa2629db8672b49e8475da6226aa4bdea85fdcdfdc15350874946d4f3c91faaf64cbdc4a5d1ab8002f473d5c3fcedcd197989cf0390f9badd3c04678706"
+  "packageManager": "pnpm@10.18.3+sha512.bbd16e6d7286fd7e01f6b3c0b3c932cda2965c06a908328f74663f10a9aea51f1129eea615134bf992831b009eabe167ecb7008b597f40ff9bc75946aadfb08d"
 }
