--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "skipLibCheck": true,
-    "types": ["@cloudflare/workers-types", "@types/he"],
+    "types": [],
     "paths": {}
   },
   "include": ["src/**/*.ts"],
