--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "discord-api-types": "^0.38.30",
     "discord-interactions": "^4.4.0",
     "discord-snowflake": "^2.0.0",
+    "gqlmin": "^0.3.1",
     "node-html-markdown-cloudflare": "^1.3.0",
     "uuid": "^13.0.0"
   },
